# Synth-Head

./: .gitignore  README.md  ovo.ovo
Documents/: .~lock.Features.ods#  Condensed.drawio  Features.ods  HID Display.drawio  Manufacturing.ods  Packaging Idea.drawio  Print Recommendations.ods  Recondensed.drawio  Reduced.drawio  Required Orders.ods  Simplex Electronics (Reduced).drawio  Software Diagram (DX.3).drawio  Synapse.drawio  Vacuum Forming Processes.drawio  Visor Manufacturing Process.drawio
Documents/Notes/: Notes.ods
Embedded/: Batch (2 Layer Non SMT).kicad_pcb  Batch (2 Layer Non SMT).kicad_prl  Batch (4 Layer SMT).kicad_pcb  Batch (4 Layer SMT).kicad_prl  Combined_Fabrication.kicad_pro
Embedded/Condensed/: Batch (2 Layer Non SMT).kicad_prl  Batch (2 Layer Non SMT).kicad_pro  Batch (4 Layer SMT).kicad_pcb  Batch (4 Layer SMT).kicad_pro
Embedded/HUB75 Display Adapter/: #auto_saved_files#  HUB75 Display Adapter.kicad_pcb  HUB75 Display Adapter.kicad_prl  HUB75 Display Adapter.kicad_pro  HUB75 Display Adapter.kicad_sch  _autosave-HUB75 Display Adapter.kicad_sch  fp-34B5.tmp  fp-info-cache
Embedded/Main Buttons/: Main Buttons.kicad_pcb  Main Buttons.kicad_prl  Main Buttons.kicad_pro  Main Buttons.kicad_sch
Embedded/Main Head CPU/: #auto_saved_files#  Main Head CPU.kicad_pcb  Main Head CPU.kicad_prl  Main Head CPU.kicad_pro  Main Head CPU.kicad_sch  _autosave-Main Head CPU.kicad_sch
Embedded/Recondensed/: 2 Layer Batch.kicad_pcb  2 Layer Batch.kicad_prl  2 Layer Batch.kicad_pro  4 layer Batch.kicad_pcb  4 layer Batch.kicad_prl  4 layer Batch.kicad_pro
Embedded/Substructure Adapter Interface/: Substructure Adapter Interface.kicad_pcb  Substructure Adapter Interface.kicad_prl  Substructure Adapter Interface.kicad_pro  Substructure Adapter Interface.kicad_sch
Embedded/Substructure Boop Board/: #auto_saved_files#  Substructure Boop Board.kicad_pcb  Substructure Boop Board.kicad_prl  Substructure Boop Board.kicad_pro  Substructure Boop Board.kicad_sch  _autosave-Substructure Boop Board.kicad_pcb  fp-info-cache
Embedded/Substructure Display Adapter/: #auto_saved_files#  Substructure Display Adapter.kicad_pcb  Substructure Display Adapter.kicad_prl  Substructure Display Adapter.kicad_pro  Substructure Display Adapter.kicad_sch  _autosave-Substructure Display Adapter.kicad_pcb  fp-info-cache
Embedded/Substructure Fan Mic Board/: #auto_saved_files#  Substructure Fan Mic Board.kicad_pcb  Substructure Fan Mic Board.kicad_prl  Substructure Fan Mic Board.kicad_pro  Substructure Fan Mic Board.kicad_sch
Embedded/Substructure GPU/: #auto_saved_files#  Substructure GPU.kicad_pcb  Substructure GPU.kicad_prl  Substructure GPU.kicad_pro  Substructure GPU.kicad_sch
Embedded/Substructure Gesture/: #auto_saved_files#  Substructure Gesture.kicad_pcb  Substructure Gesture.kicad_prl  Substructure Gesture.kicad_pro  Substructure Gesture.kicad_sch
Embedded/Substructure Main/: #auto_saved_files#  (+10 more)
Hardware/: XCR Head DX.3 (Main).step
Software/Testing_N_Experimentation/Alpha_Release_Stack/src/: CMakeLists.txt  CPU.cpp  CPU_BaseAPI_Test.cpp  CPU_BaudTest.cpp  CPU_FpsTest.cpp  CPU_FrameworkAPI_AsteroidsTest.cpp  CPU_FrameworkAPI_SandSim.cpp  CPU_GpuDriverTest.cpp  CPU_HAL_Test.cpp  CPU_Main.cpp  CPU_ModeToggle.cpp  CPU_OledOrientationTest.cpp  CPU_OledTest.cpp  CPU_OledUITest.cpp  CPU_PolygonDemo.cpp  CPU_Programmable_Test.cpp  CPU_SceneComposerTest.cpp  CPU_SdCardTest.cpp  CPU_SimpleSpriteTest.cpp  CPU_SpriteDemo.cpp  CPU_SystemAPI_OledWeb.cpp  CPU_WebConfigTest.cpp  CPU_WifiSpriteUploadTest.cpp  CPU_YamlParserTest.cpp  CpuUartBidirectional.cpp  GPU.cpp  GPU_BaseAPI_Test.cpp  GPU_BaudTest.cpp  GPU_CommandRenderer.cpp  GPU_GpuDriver_Test.cpp  GPU_HAL_Test.cpp  GPU_Programmable.cpp  GpuUartBidirectional.cpp  SimpleUARTTest.cpp  i2c_sensor_test.cpp  idf_component.yml  main.cpp  nvs_init_example.cpp  parametric_led_cpu_receiver.cpp  uart_cpu_bidirectional.cpp  (+3 more)
Software/Testing_N_Experimentation/Alpha_Release_Stack/src/Application/: Application.hpp
Software/Testing_N_Experimentation/Alpha_Release_Stack/src/Application/Controllers/: EyeController.hpp
Software/Testing_N_Experimentation/Alpha_Release_Stack/src/Application/Core/: ApplicationCore.cpp  ApplicationCore.hpp  SyncBuffer.hpp  TaskManager.hpp
Software/Testing_N_Experimentation/Alpha_Release_Stack/src/Application/Pipeline/: AnimationPipeline.hpp  GpuPipeline.hpp  SceneRenderer.hpp  SpriteSystem.hpp
Software/Testing_N_Experimentation/Alpha_Release_Stack/src/Application/Sprites/: SpriteDriver.hpp
Software/Testing_N_Experimentation/Alpha_Release_Stack/src/Archive/: CPU_GpuCommands_Test.cpp  CPU_GpuDriver_Example.cpp  CPU_GpuDriver_Test.cpp  CPU_OledWebDemo.cpp  CPU_Programmable_Test.cpp  GPU.cpp  GPU_Advanced_Demo.cpp  GPU_Advanced_Demo_Optimized.cpp  GPU_DisplaySlave.cpp  GPU_GpuDriver_Example.cpp  GPU_Simple_UART.cpp
Software/Testing_N_Experimentation/Alpha_Release_Stack/src/Drivers/: BmeDriver.cpp  FanDriver.cpp  GpsDriver.cpp  ImuDriver.cpp  MicDriver.cpp
Software/Testing_N_Experimentation/Alpha_Release_Stack/src/HAL/: CPU_HAL_Config.hpp  led_strip_encoder.c  led_strip_i2s.c
Software/Testing_N_Experimentation/Alpha_Release_Stack/src/HAL/ESP32/: Esp32Hal.hpp  Esp32HalDataStore.hpp  Esp32HalDisplay.hpp  Esp32HalGpio.hpp  Esp32HalGps.hpp  Esp32HalI2c.hpp  Esp32HalI2s.hpp  Esp32HalLedStrip.hpp  Esp32HalLog.hpp  Esp32HalMicrophone.hpp  Esp32HalSensors.hpp  Esp32HalSpi.hpp  Esp32HalStorage.hpp  Esp32HalTimer.hpp  Esp32HalUart.hpp  Esp32SdCard.hpp
Software/Testing_N_Experimentation/Alpha_Release_Stack/src/Lifecycle/: LifecycleController.cpp  LifecycleController.hpp  SharedState.hpp
Software/Testing_N_Experimentation/Alpha_Release_Stack/src/Modes/: BootMode.cpp  BootMode.hpp  CurrentMode.cpp  CurrentMode.hpp
Software/Testing_N_Experimentation/Alpha_Release_Stack/src/SystemAPI/GPU/: GpuDriver.cpp  GpuDriver.h
Software/Testing_N_Experimentation/Alpha_Release_Stack/src/Test Files (Move to main src to use)/: DualDisplayTest.cpp  uart_cpu_sensor_display.cpp  uart_gpu_bidirectional.cpp  uart_gpu_sensor_display.cpp
(+519 files in other folders)
